# computational_geometry

./: .gitmodules  README.md
geometry_project/: .gitignore.txt  Cargo.toml  build.txt  line_intersection_scenario.txt  log_output.txt  todo.txt
geometry_project/src/: convex_hull_scenario.rs  main.rs
geometry_project/src/algorithms/: convex_hull.rs  line_intersection.rs  mixed_increment.rs  mod.rs  permutation.rs  random_geometry.rs
geometry_project/src/display/: bresnehem.rs  camera.rs  hsv.rs  mod.rs  rgb.rs  scenario.rs  scene.rs  scene_proxy.rs  string_builder.rs
geometry_project/src/entities/: affine_matrix2d.rs  algorithms.rs  angle.rs  extents2d.rs  lexicographic2d.rs  line2d.rs  mod.rs  point2d.rs  polygon2d.rs  rectangle2d.rs  vect2d.rs
geometry_project/src/extensions/: mod.rs  vec_extensions.rs  vec_string.rs
geometry_project/src/numerics/: approx_equatable.rs  approx_partial_order.rs  floating_comparisons.rs  mod.rs
geometry_project/src/scenarios/: convex_hull_scenario.rs  debug_scenario.rs  line_intersection_scenario.rs  mod.rs  right_turn_debug.rs  scenario_serializer.rs
geometry_project/src/scene_logger/: mod.rs  scene_logger.rs
geometry_project/src/testing_tools/: assert_helper.rs  mod.rs
