[package]
name = "geometry_project"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = "0.25.0"
log_statement = { path = "../AOPLogger/log_statement" }
time_attribute = { path = "../AOPLogger/time_attribute" }
logging = { path = "../AOPLogger/logging", features = ["Debug"] }
data_structures = { path = "../MemoryMapping/data_structures"}
memory_math = { path = "../MemoryMapping/memory_math"}

log = { version = "0.4.22", features = ["std", "serde", "kv"] }
rand = { version = "0.9"}
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
itertools = "0.14.0"
ctrlc = "3.4.7"

[features]
default = ["Camera", "RightTurnDebug"]
Camera = ["Debug"]
Debug = []
Trace = []
ConvexHull = ["Debug"]
RightTurnDebug = ["Debug"]
